sample/msvc/error/c2528.cpp
// C2528.cpp
int i;
int &ir = i;
int & (*irptr) = ir;    // C2528
